# lambda-hyper-example-workspace

./: Cargo.toml  Makefile  README.md
app/: Cargo.toml
app/src/: lib.rs
lambda/: Cargo.toml
lambda/src/: lambda_event_layer.rs  main.rs
server/: Cargo.toml
server/src/: http_layer.rs  main.rs
