[package]
name = "lambda"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.5.0"
tokio = { version = "1.17.0", features = ["full"] }
app = { path = "../app" }
serde_json = "1.0.79"
tower = "0.4.12"