[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.14.17"
serde_json = "1.0.79"
app = { path = "../app" }
tokio = { version = "1.17.0", features = ["full"] }
futures = "0.3.21"
tower = "0.4.12"
anyhow = "1.0.55"